# GDUT-Grade-Monitor

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.2.5.md  RELEASE_NOTES_v0.2.6.md  RELEASE_NOTES_v0.2.7.md  RELEASE_NOTES_v0.2.8.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.2.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.5.md  RELEASE_NOTES_v0.3.6.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.3.8.md  RELEASE_NOTES_v0.3.9.md  SECURITY.md  pyproject.toml
gdut_grade_monitor/: __init__.py  auth.py  cleanup.py  cli.py  client.py  constants.py  credentials.py  desktop.py  diagnostics.py  doctor.py  errors.py  grades.py  gui.py  gui_model.py  log_view.py  manual_scores.py  monitor.py  notification_channels.py  notify.py  official_transcript.py  patch_update.py  qt_gui.py  readonly.py  runtime_health.py  settings_backup.py  setup_flow.py  storage.py  task.py  transcript.py  update_check.py
packaging/: desktop_launcher.py
scripts/: apply_patch_update.ps1  build_exe.ps1  build_installer.ps1  build_patch.ps1  cleanup_residue.cmd  cleanup_residue.ps1  install.ps1  test_portable_release.ps1  uninstall.ps1  write_checksums.ps1
tests/: test_auth_fill.py  test_cleanup_residue.py  test_client.py  test_diagnostics.py  test_doctor_and_config_cli.py  test_error_messages.py  test_grades.py  test_gui_model.py  test_installer_packaging.py  (+18 more)
(+10 files in other folders)
